Add user dtos and handler logics
