# cmd/api/dto/login_user.go
@@ -1,0 +1,6 @@
+package dto
+
+type LoginUser struct {
+	Email    string `json:"email" binding:"required,email"`
+	Password string `json:"password" binding:"required"`
+}
