# cmd/api/dto/register_user.go
@@ -1,0 +1,7 @@
+package dto
+
+type RegisterUser struct {
+	Name     string `json:"name" binding:"required"`
+	Email    string `json:"email" binding:"required,email"`
+	Password string `json:"password" binding:"required"`
+}
