# cmd/api/dto/user.go
@@ -1,7 +1,11 @@
 package dto
 
+import "time"
+
 type User struct {
-	ID    uint   `json:"id"`
-	Name  string `json:"name" binding:"required"`
-	Email string `json:"email" binding:"required,email"`
+	ID        uint      `json:"id"`
+	Name      string    `json:"name" binding:"required"`
+	Email     string    `json:"email" binding:"required,email"`
+	CreatedAt time.Time `json:"created_at"`
+	UpdatedAt time.Time `json:"updated_at"`
 }
